// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analyzers NodeAnalyzer should analyze a project with node-version correctly 1`] = `
Object {
  "nodeVersion": true,
  "nodeVersionManagerInfo": Object {
    "node-version": "10.0.0",
    "nvm": false,
  },
}
`;

exports[`Analyzers NodeAnalyzer should analyze a project with nvmrc and node-version correctly 1`] = `
Object {
  "nodeVersion": true,
  "nodeVersionManagerInfo": Object {
    "node-version": "9.0.0",
    "nvm": "9.0.0",
  },
}
`;

exports[`Analyzers NodeAnalyzer should analyze a project with nvmrc correctly 1`] = `
Object {
  "nodeVersion": true,
  "nodeVersionManagerInfo": Object {
    "node-version": false,
    "nvm": "10.0.0",
  },
}
`;

exports[`Analyzers NodeAnalyzer should analyze a project without node meta configuration 1`] = `
Object {
  "nodeVersion": false,
}
`;
